# vesting-dapp

./: LICENSE  README.md
dapp/: .gitignore  README.md  package-lock.json  package.json
sc/: Cargo.toml  README.md
sc/interaction/: devnet.snippets.sh  playground.py
sc/meta/: Cargo.toml
sc/meta/src/: main.rs
sc/scenarios/: 001_contract_deploy.scen.json  002_operator_set_new_operator.scen.json  003_set_listing_epoch.scen.json  004_vested_token_set_vested_token.scen.json  005_A_category_add_several_categories.scen.json  005_B_category_add_update_one.scen.json  005_C_category_add_wrong_percent.scen copy.json  005_D0_category_add_indivisible_percentage.scen.json  005_D1_category_add_indivisible_percentage.scen.json  005_F_category_remove_wrong_cagegory.scen.json  006_A_wallet_add_to_category.scen.json  006_B_wallet_remove_from_category.scen.json  007_category_remove_category.scen.json  008_add_funds.scen.json  009_A_claim.scen.json  009_B_claim_worng_user.scen.json  009_C_claim_with_two_categories.scen.json  010_A_claim_second_time.scen.json  010_B_claim_after_period_ends.scen.json
sc/scenarios/current_epoch_changes/: current_epoch_set_to_1000.json  current_epoch_set_to_500.json  current_epoch_set_to_520.json  current_epoch_set_to_870.json  current_epoch_set_to_880.json
sc/scenarios/wallets/: base_wallets.json  wallet1.json  wallet2.json
sc/src/: custom_types.rs  frozen_state.rs  operator.rs  storage.rs  vesting.rs
sc/tests/: adder_mandos_constructed_raw_test.rs  adder_mandos_go_test.rs  adder_mandos_rs_test.rs
sc/wasm/: Cargo.toml
sc/wasm/src/: lib.rs
(+33 files in other folders)
