[package]
name = "vesting-wasm"
version = "0.0.1"
authors = ["Pedro Carranza <pedro.carranza@moonlorian.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.vesting]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.36.1"


[dependencies.elrond-wasm-output]
version = "0.36.1"

features = ["wasm-output-mode"]

[workspace]
members = ["."]
